app-in-apps/yaml/walos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: walos-service
  labels:
    app: walos
  namespace: walos
spec:
  selector:
    app: walos
  ports:
    - name: ui
      port: 8080
      protocol: TCP
      targetPort: http
  type: ClusterIP
